--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: 3000x  Blog
-SEOTitle: 3000x | WX Blog
+title: minminx  Blog
+SEOTitle: minx | LB Blog
 header-img: img/post-bg-desk.jpg
-email: 1036170785@qq.com
+email: 1806396820@qq.com
 description: "Every failure is leading towards success."
-keyword: "WX, WX Blog, 3000x, letyoudown, illneverloveagain, Apple, iPhone"
-url: "http://letyoudown.github.io"          # your host, for absolute URL
+keyword: "LB, LB Blog, 3000x, letyoudown, illneverloveagain, Apple, iPhone"
+url: "http://ll.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/letyoudown.github.io.git" # you code repository
 
